Added so that the code is compileable

--- a/EscapeTheBackroomsGUiTest/EscapeTheBackroomsGUiTest.vcxproj
+++ b/EscapeTheBackroomsGUiTest/EscapeTheBackroomsGUiTest.vcxproj
@@ -184,10 +184,10 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="C:\Users\sonny\Downloads\backgroundpng\Out\IncludeFile.h" />
     <ClInclude Include="Cheat.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="HostModifiers.h" />
+    <ClInclude Include="Out\IncludeFile.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="SDK\PropertyFixup.hpp" />
     <ClInclude Include="SDK\SDK.hpp" />
