--- a/EscapeTheBackroomsGUiTest/EscapeTheBackroomsGUiTest.vcxproj.filters
+++ b/EscapeTheBackroomsGUiTest/EscapeTheBackroomsGUiTest.vcxproj.filters
@@ -5757,7 +5757,7 @@
     <ClInclude Include="HostModifiers.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\sonny\Downloads\backgroundpng\Out\IncludeFile.h">
+    <ClInclude Include="Out\IncludeFile.h">
       <Filter>Headerdateien\Data</Filter>
     </ClInclude>
   </ItemGroup>
