--- a/EscapeTheBackroomsGUiTest/EscapeTheBackroomsGUiTest.vcxproj
+++ b/EscapeTheBackroomsGUiTest/EscapeTheBackroomsGUiTest.vcxproj
@@ -89,9 +89,9 @@
     <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x64;$(LibraryPath);U:\DCInParis\EscapeTheBackroomsGUiTest\EscapeTheBackroomsGUiTest\vcpkg_Out\lib</LibraryPath>
-    <ExternalIncludePath>U:\DCInParis\EscapeTheBackroomsGUiTest\EscapeTheBackroomsGUiTest\Out;$(ExternalIncludePath)</ExternalIncludePath>
+    <IncludePath>$(IncludePath)</IncludePath>
+    <LibraryPath>$(LibraryPath);.\vcpkg_Out\lib</LibraryPath>
+    <ExternalIncludePath>$(ExternalIncludePath)</ExternalIncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='d|x64'">
     <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);U:\DCInParis\EscapeTheBackroomsGUiTest\EscapeTheBackroomsGUiTest\vcpkg_Out\lib</LibraryPath>
@@ -202,6 +202,8 @@
     <ClInclude Include="CheatDefines.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GUI\ZeroGUI.h" />
+    <ClInclude Include="GUI\ZeroInput.h" />
     <ClInclude Include="HostModifiers.h" />
     <ClInclude Include="Out\File0.h" />
     <ClInclude Include="Out\File1.h" />
@@ -2230,6 +2232,7 @@
     <ClInclude Include="SDK\SDK\XShip_parameters.hpp" />
     <ClInclude Include="SDK\SDK\XShip_structs.hpp" />
     <ClInclude Include="Settings.h" />
+    <ClInclude Include="vcpkg_Out\include\MinHook.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Config.cpp" />
